《Linux集群之美》第5章/5.2.4/tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: 192.168.1.225:8084/tomcat
        ports:
        - containerPort: 8080
          name: httpport
        - containerPort: 8009
          name: ajpport
